[gd_scene load_steps=15 format=3 uid="uid://bxitu71ehs5j4"]

[ext_resource type="Script" path="res://player.gd" id="1_g08de"]
[ext_resource type="Texture2D" uid="uid://dhpg8y2rdcy3q" path="res://characters.png" id="2_2cjao"]
[ext_resource type="AudioStream" uid="uid://bdi8dcafcm8nt" path="res://jump_01.wav" id="3_8gcfy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j147k"]
atlas = ExtResource("2_2cjao")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o081g"]
atlas = ExtResource("2_2cjao")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj2yi"]
atlas = ExtResource("2_2cjao")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1opvd"]
atlas = ExtResource("2_2cjao")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qomgm"]
atlas = ExtResource("2_2cjao")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnuoq"]
atlas = ExtResource("2_2cjao")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvg3r"]
atlas = ExtResource("2_2cjao")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btgu5"]
atlas = ExtResource("2_2cjao")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd8we"]
atlas = ExtResource("2_2cjao")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h33uf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j147k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o081g")
}],
"loop": false,
"name": &"jump1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj2yi")
}],
"loop": false,
"name": &"jump2",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1opvd")
}],
"loop": false,
"name": &"jump3",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qomgm")
}],
"loop": false,
"name": &"jump4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnuoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvg3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btgu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd8we")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hs7n6"]
radius = 8.0
height = 22.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g08de")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -6)
sprite_frames = SubResource("SpriteFrames_h33uf")
animation = &"jump4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_hs7n6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_speed = 1.0

[node name="jumpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8gcfy")
volume_db = -9.37

[connection signal="is_swimming" from="." to="." method="_on_is_swimming"]
